--- a/style.css
+++ b/style.css
@@ -1,1 +1,123 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    -webkit-tap-highlight-color: transparent;
+}
 
+
+body {
+    background-image: url(assets/image.jpg);
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+    color: rgb(233, 194, 194);
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 3px;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 4%;
+    margin-bottom: 3%;
+    padding: 5px;
+    text-shadow: 1px 1px 1px #39237cd2;
+    transition: color 0.5s;
+}
+
+h1:hover {
+    color: #a194c871;
+}
+
+.textarea {
+    background-color: #f6f4f9;
+    width: 100%;
+    height: 200px;
+    resize: none;
+    outline: none;
+    padding: 10px;
+    border: #8a8585 solid 3px;
+    border-radius: 5px;
+    font-size: 18px;
+    font-family: inherit;
+}
+
+.wrapper {
+    width: 1000px;
+    margin: 0 auto;
+}
+
+.keyboard {
+    width: 1000px;
+    background-color: #8a8585 ;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.key {
+    display: inline-block;
+    position: relative;
+    width: 60px;
+    height: 60px;
+    background-color: #74707a;
+    margin: 6px;
+    border-radius: 5px;
+    text-align: center;
+    padding: 17px 0;
+    cursor: pointer;
+    transition: background-color 0.6s;
+    z-index: 1;
+    box-shadow: 2px 4px 4px #39237cd2, 1px 1px 1px #39237cd2;
+}
+
+.key:hover {
+    background-color: #39237cd2;
+}
+
+.control-key {
+    background-color: var(#2f2f30);
+}
+
+.control-key:hover {
+    background-color: #091212;
+}
+
+.key:active {
+    top: 3px;
+    left: 1px;
+}
+
+.active {
+    top: 3px;
+    left: 1px;
+    background-color: #39237cd2;
+}
+
+.active-background {
+    background-color: #091212;
+}
+
+.capslock-active {
+    color: #39237cd2;
+}
+
+.big {
+    width: 490px;
+}
+
+.middle {
+    width: 130px;
+}
+
+.addition {
+    text-align: center;
+    margin: 20px;
+}
